analysis_page.xhtml

--- a/Website/analysis_page.xhtml
+++ b/Website/analysis_page.xhtml
@@ -17,6 +17,8 @@
                 object is marked, it may be preposed to the beginning of the sentence for emphasis without losing meaning. Another interesting difference is the use of rhetorical questions. The original Qur'anic text is punctuated according to 
                 rhythm and flow of the language because it was originally engaged with as a recited text. Thus, the punctuation is concerned with breath control, intonantion, and devotional movements rahter than structure. This allows for some abiguity 
                 in the interpretation of rhetorical questions. Finally, Ali's interpretation was the only text that made explicit use of dramatic irony.</p>
+            <p>We also wanted to present a visualization of the usage of rhetorical devices across surah's by text. This would help us see what rhetorical devices were favoured in each text for the same surah. 
+                We were going to use radar plots for this, but we couldn't get the math for that to work out as well as we needed it to.</p>
         </div>
         <div class="boxed"><svg xmlns="http://www.w3.org/2000/svg"
             height="450"
